# line-profiler-extended

./: .cruft.json  CHANGELOG.md  LICENCE  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: test.yml
src/line_profiler_extended/: __init__.py  ipython_extension.py  lpext.py  pytest_plugin.py  utils.py
tests/: module.py  test_lpext.py  test_pytest_plugin.py  test_utils.py
